Use fixed width as well as height for cover art in list
The centering and cropping for wide images wasn't actually behaving
as intended; it only seemed that way because of the particular
test image used.

The compromise now is that tall images will be cropped (not centered).

Also, adjust the height to match a whole number of lines of text
(for vertical rhythm).

--- a/static/styles.css
+++ b/static/styles.css
@@ -103,24 +103,20 @@ h3 {
 	padding: 0em;
 }
 .music-list li {
-	height: 11.25em;
 	margin: 0.75em 0em;
 	overflow: hidden;
 }
-.music-list li div {
-	height: 100%;
-}
 .music-list-cover {
 	float: left;
-	width: 11.25em;
+	width: 9em;
 	max-width: 50%;
+	height: 9em;
 	margin-right: 1em;
 	overflow: hidden;
 	text-align: center;
 }
 .music-list-cover img {
-	height: 100%;
-	margin: 0% -50%;
+	width: 100%;
 }
 .pagination {
 	position: relative;
